# ocel-rs

./: .gitignore  ARCHITECTURE.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  deny.toml  rust-toolchain.toml
.cargo/: config.toml
.githooks/: pre-commit
.github/workflows/: ci.yml  wheels.yml
crates/ocel/: Cargo.toml
crates/ocel-cli/: Cargo.toml
crates/ocel-cli/src/: main.rs
crates/ocel-cli/tests/: cli.rs
crates/ocel-core/: Cargo.toml
crates/ocel-core/examples/: bench.rs  roundtrip.rs
crates/ocel-core/src/: error.rs  lib.rs  validate.rs
crates/ocel-core/src/io/: coerce.rs  json.rs  mod.rs  sqlite.rs  xml.rs
crates/ocel-core/src/model/: builder.rs
crates/ocel-core/tests/: filter.rs  fixtures.rs  graph.rs  json_io.rs  large_scale.rs  model.rs  sample.rs  sqlite_io.rs  typed_io.rs  validate.rs  xml_io.rs
crates/ocel-core/tests/fixtures/: edge_cases.json
crates/ocel-etl/: Cargo.toml
crates/ocel-py/: Cargo.toml  README.md  build.rs  pyproject.toml
crates/ocel-py/src/: lib.rs
crates/ocel/examples/: bench.rs  roundtrip.rs
crates/ocel/src/: filter.rs  graph.rs  sample.rs  validate.rs
crates/ocel/src/io/: coerce.rs  mod.rs  sqlite.rs  xml.rs
crates/ocel/src/model/: attr.rs  builder.rs  mod.rs
crates/ocel/tests/: filter.rs  fixtures.rs  graph.rs  json_io.rs  large_scale.rs  model.rs  sample.rs  sqlite_io.rs  typed_io.rs  validate.rs  xml_io.rs
crates/ocel/tests/fixtures/: README.md  minimal.json  order_management_small.json
docs/: architecture.md  development-guide.md  ocel2-comprehensive-research.md  spec-v0.1.md
docs/adr/: 0001-ocel-native-core.md
scripts/: bench-pm4py-compare.py  fetch-official-fixtures.sh
