[workspace]
resolver = "2"
members = ["crates/ocel-core", "crates/ocel-cli", "crates/ocel-py"]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/katsut/ocel-rs"

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
thiserror = "2"

[workspace.lints.rust]
unsafe_code = "forbid"
rust_2018_idioms = { level = "warn", priority = -1 }
missing_debug_implementations = "warn"
unreachable_pub = "warn"

[workspace.lints.clippy]
pedantic = { level = "warn", priority = -1 }
module_name_repetitions = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"

[profile.dev]
opt-level = 0
debug = "line-tables-only"  # フルdebuginfo不要 → ディスク節約 & リンク高速化

[profile.dev.package."*"]
opt-level = 1  # 依存クレートだけ軽く最適化（実行速度UP、ビルド差はわずか）

[profile.release]
opt-level = 3
lto = "thin"  # thin LTO: fat LTOより高速、十分なサイズ削減
strip = true  # デバッグシンボル除去（バイナリサイズ削減）
# codegen-units = 1 は最終リリースビルドのみ（CI で指定）
