[workspace]
resolver = "2"
members = ["crates/ocel", "crates/ocel-cli", "crates/ocel-py"]

[workspace.package]
version = "0.1.3"
edition = "2021"
license = "MIT"
repository = "https://github.com/katsut/ocel-rs"

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
thiserror = "2"

[workspace.lints.rust]
unsafe_code = "forbid"
rust_2018_idioms = { level = "warn", priority = -1 }
missing_debug_implementations = "warn"
unreachable_pub = "warn"

[workspace.lints.clippy]
pedantic = { level = "warn", priority = -1 }
module_name_repetitions = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"

[profile.dev]
opt-level = 0
debug = "line-tables-only" # full debuginfo not needed -> smaller disk, faster links

[profile.dev.package."*"]
opt-level = 1 # lightly optimize dependencies only (faster runs, negligible build cost)

[profile.release]
opt-level = 3
lto = "thin" # thin LTO: much faster than fat LTO, most of the size win
strip = true # drop debug symbols from release binaries
# set codegen-units = 1 only for final release builds (in CI)
