[package]
name = "ocel-py"
description = "Python bindings for ocel-core (OCEL 2.0 event logs)"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
publish = false # distributed as a Python package (maturin), not on crates.io

[lib]
name = "ocel"
crate-type = ["cdylib"]

[dependencies]
ocel-core = { path = "../ocel-core", version = "0.1.0" }
chrono.workspace = true
pyo3 = { version = "0.29", features = ["extension-module", "abi3-py39", "chrono"] }

[build-dependencies]
pyo3-build-config = "0.29"

# NOTE: does not inherit workspace lints — pyo3 macros expand to unsafe glue,
# which the workspace-level `unsafe_code = "forbid"` would reject.
[lints.rust]
rust_2018_idioms = { level = "warn", priority = -1 }

[lints.clippy]
pedantic = { level = "warn", priority = -1 }
# binding signatures take owned values by design (pyo3 conversion)
needless_pass_by_value = "allow"
