[package]
name = "ocel-py"
description = "Python bindings for ocel (OCEL 2.0 event logs)"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
publish = false # distributed as a Python package (maturin), not on crates.io

[lib]
# lib target is named ocel_py to avoid colliding with the `ocel` dependency;
# maturin renames the extension module to `ocel` (see pyproject.toml).
name = "ocel_py"
crate-type = ["cdylib"]

[dependencies]
ocel = { path = "../ocel", version = "0.1.1" }
chrono.workspace = true
# abi3-py311: the Arrow PyCapsule/buffer APIs join the limited API in 3.11
# (3.9/3.10 are EOL or near-EOL anyway)
pyo3 = { version = "0.29", features = ["extension-module", "abi3-py311", "chrono"] }
pyo3-arrow = "0.19"
arrow-array = "59"
arrow-schema = "59"

[build-dependencies]
pyo3-build-config = "0.29"

# NOTE: does not inherit workspace lints — pyo3 macros expand to unsafe glue,
# which the workspace-level `unsafe_code = "forbid"` would reject.
[lints.rust]
rust_2018_idioms = { level = "warn", priority = -1 }

[lints.clippy]
pedantic = { level = "warn", priority = -1 }
# binding signatures take owned values by design (pyo3 conversion)
needless_pass_by_value = "allow"
