[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "ocel"
description = "OCEL 2.0 event logs: read, write, validate, filter, and sample (Rust-powered)"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
keywords = ["ocel", "process-mining", "event-log", "object-centric"]
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "License :: OSI Approved :: MIT License",
]
dynamic = ["version"]

[tool.maturin]
features = ["pyo3/extension-module"]
