[package]
name = "ocel"
description = "OCEL 2.0 data model, I/O (JSON/SQLite/XML), and validation library"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
documentation = "https://docs.rs/ocel"
readme = "../../README.md"
keywords = ["ocel", "process-mining", "event-log", "object-centric", "ocel2"]
categories = ["data-structures", "parser-implementations"]

[dependencies]
serde.workspace = true
serde_json.workspace = true
chrono.workspace = true
thiserror.workspace = true
rusqlite = { version = "0.32", features = ["bundled"] }
quick-xml = { version = "0.37", features = ["serialize"] }

[dev-dependencies]
chrono.workspace = true
serde_json.workspace = true

[lints]
workspace = true
